// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-infotip Custom button content (With render prop) 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; margin: 200px;"
  >
    <span
      class="infotip"
    >
      <button
        aria-expanded="false"
        aria-label="Click to open infotip"
        class="icon-btn icon-btn--transparent infotip__host"
        style="height: auto; width: auto;"
        type="button"
      >
        <span
          style="display: inline-flex; align-items: center;"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
          <span
            style="margin-left: 5px;"
          >
            Click me
          </span>
        </span>
      </button>
      <span
        class="infotip__overlay"
        style="transform: scale3d(1,1,1); left: -10px;"
      >
        <span
          class="infotip__pointer infotip__pointer--top-left"
        />
        <span
          class="infotip__mask"
        >
          <span
            class="infotip__cell"
          >
            <span
              class="infotip__content"
            >
              <span
                class="infotip__heading"
              >
                Title
              </span>
              <p>
                Use Access Key 'S' to display settings.
              </p>
            </span>
            <button
              aria-label="Close"
              class="icon-btn icon-btn--transparent infotip__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-infotip Custom icon 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; margin: 200px;"
  >
    <span
      class="infotip"
    >
      <button
        aria-expanded="false"
        aria-label="Infotip"
        class="icon-btn icon-btn--transparent infotip__host"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--settings-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-settings-16"
          />
        </svg>
      </button>
      <span
        class="infotip__overlay"
        style="transform: translateX(-50%) scale3d(1,1,1); left: 50%;"
      >
        <span
          class="infotip__pointer infotip__pointer--bottom"
        />
        <span
          class="infotip__mask"
        >
          <span
            class="infotip__cell"
          >
            <span
              class="infotip__content"
            >
              <span
                class="infotip__heading"
              >
                Title
              </span>
              <p>
                Content
              </p>
            </span>
            <button
              aria-label="Close"
              class="icon-btn icon-btn--transparent infotip__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-infotip Default 1`] = `
<DocumentFragment>
  <div
    style="display: flex; margin: 200px;"
  >
    <span
      class="infotip"
    >
      <button
        aria-expanded="false"
        aria-label="Infotip"
        class="icon-btn icon-btn--transparent infotip__host"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--information-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-information-16"
          />
        </svg>
      </button>
      <span
        class="infotip__overlay"
        style="transform: translateX(-50%) scale3d(1,1,1); left: 50%;"
      >
        <span
          class="infotip__pointer infotip__pointer--bottom"
        />
        <span
          class="infotip__mask"
        >
          <span
            class="infotip__cell"
          >
            <span
              class="infotip__content"
            >
              <span
                class="infotip__heading"
              >
                Title
              </span>
              <p>
                Content
              </p>
            </span>
            <button
              aria-label="Close"
              class="icon-btn icon-btn--transparent infotip__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-infotip Disabled 1`] = `
<DocumentFragment>
  <div
    style="display: flex; margin: 200px;"
  >
    <span
      class="infotip"
    >
      <button
        aria-expanded="false"
        aria-label="Infotip"
        class="icon-btn icon-btn--transparent infotip__host"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--information-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-information-16"
          />
        </svg>
      </button>
      <span
        class="infotip__overlay"
        style="transform: translateX(-50%) scale3d(1,1,1); left: 50%;"
      >
        <span
          class="infotip__pointer infotip__pointer--bottom"
        />
        <span
          class="infotip__mask"
        >
          <span
            class="infotip__cell"
          >
            <span
              class="infotip__content"
            >
              <span
                class="infotip__heading"
              >
                Title
              </span>
              <p>
                Content
              </p>
            </span>
            <button
              aria-label="Close"
              class="icon-btn icon-btn--transparent infotip__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-infotip Expanded by default 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; margin: 200px;"
  >
    <span
      class="infotip infotip--expanded"
    >
      <button
        aria-expanded="true"
        aria-label="Infotip"
        class="icon-btn icon-btn--transparent infotip__host"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--information-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-information-16"
          />
        </svg>
      </button>
      <span
        class="infotip__overlay"
        style="transform: scale3d(1,1,1); left: -10px;"
      >
        <span
          class="infotip__pointer infotip__pointer--top-left"
        />
        <span
          class="infotip__mask"
        >
          <span
            class="infotip__cell"
          >
            <span
              class="infotip__content"
            >
              <span
                class="infotip__heading"
              >
                Title
              </span>
              <p>
                Use Access Key 'S' to display settings.
              </p>
            </span>
            <button
              aria-label="Close"
              class="icon-btn icon-btn--transparent infotip__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-infotip In paragraph 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; margin: 100px;"
  >
    <em>
      NOTE: No block elements can be nested in p elements, like div, h1-6, or other p elements. Any content with that will break
    </em>
    <p>
      Some paragraph content 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Important information"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: translateX(-50%) scale3d(1,1,1); left: 50%;"
        >
          <span
            class="infotip__pointer infotip__pointer--bottom"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Important
                </span>
                <span>
                  This is some important info
                </span>
              </span>
              <button
                aria-label="Dismiss infotip"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
       More paragraph content
    </p>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-infotip Modal 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; margin: 100px;"
  >
    <span
      class="dialog--mini infotip"
    >
      <button
        aria-expanded="false"
        aria-label="Infotip"
        class="icon-btn icon-btn--transparent infotip__host dialog--mini__host"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--information-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-information-16"
          />
        </svg>
      </button>
    </span>
    <div>
      <div
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="drawer-dialog dialog--mini__overlay drawer-dialog--mask-fade-slow"
        hidden=""
        mode="mini"
        role="dialog"
      >
        <div
          class="drawer-dialog__window drawer-dialog__window drawer-dialog__window--slide"
        >
          <button
            aria-label="Maximize Text Label"
            class="drawer-dialog__handle"
            type="button"
          />
          <div
            class="drawer-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              <span
                class="infotip__heading"
              >
                Title
              </span>
            </h2>
            <button
              aria-label="Close"
              class="icon-btn drawer-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </div>
          <div
            class="drawer-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-infotip Pointer direction 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; margin-left: 300px;"
  >
    <div
      style="margin: 100px 0px;"
    >
      top 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: translateX(-50%) scale3d(1,1,1); left: 50%;"
        >
          <span
            class="infotip__pointer infotip__pointer--top"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      top-left 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: scale3d(1,1,1); left: -10px;"
        >
          <span
            class="infotip__pointer infotip__pointer--top-left"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      top-right 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: scale3d(1,1,1); right: -10px;"
        >
          <span
            class="infotip__pointer infotip__pointer--top-right"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      right 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: translateX(-16px) translateY(-50%) scale3d(1,1,1); right: 100%; top: -6px;"
        >
          <span
            class="infotip__pointer infotip__pointer--right"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      right-bottom 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: translateX(-16px) scale3d(1,1,1); right: 100%; bottom: -50%;"
        >
          <span
            class="infotip__pointer infotip__pointer--right-bottom"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      right-top 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: translateX(-16px) scale3d(1,1,1); right: 100%; top: -100%;"
        >
          <span
            class="infotip__pointer infotip__pointer--right-top"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      bottom 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: translateX(-50%) scale3d(1,1,1); left: 50%;"
        >
          <span
            class="infotip__pointer infotip__pointer--bottom"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      bottom-left 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: scale3d(1,1,1); left: -10px;"
        >
          <span
            class="infotip__pointer infotip__pointer--bottom-left"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      bottom-right 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: scale3d(1,1,1); right: -10px;"
        >
          <span
            class="infotip__pointer infotip__pointer--bottom-right"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      left 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: translateX(16px) translateY(-50%) scale3d(1,1,1); left: 100%; top: -6px;"
        >
          <span
            class="infotip__pointer infotip__pointer--left"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      left-bottom 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: translateX(16px) scale3d(1,1,1); left: 100%; bottom: -10px;"
        >
          <span
            class="infotip__pointer infotip__pointer--left-bottom"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      style="margin: 100px 0px;"
    >
      left-top 
      <span
        class="infotip"
      >
        <button
          aria-expanded="false"
          aria-label="Infotip"
          class="icon-btn icon-btn--transparent infotip__host"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--information-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-information-16"
            />
          </svg>
        </button>
        <span
          class="infotip__overlay"
          style="transform: translateX(16px) scale3d(1,1,1); left: 100%; top: -100%;"
        >
          <span
            class="infotip__pointer infotip__pointer--left-top"
          />
          <span
            class="infotip__mask"
          >
            <span
              class="infotip__cell"
            >
              <span
                class="infotip__content"
              >
                <span
                  class="infotip__heading"
                >
                  Title
                </span>
                <p>
                  Use Access Key 'S' to display settings.
                </p>
              </span>
              <button
                aria-label="Close"
                class="icon-btn icon-btn--transparent infotip__close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon icon--close-16"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-close-16"
                  />
                </svg>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-infotip Pointer with custom location 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; margin: 200px;"
  >
    <span
      class="infotip"
    >
      <button
        aria-expanded="false"
        aria-label="Infotip"
        class="icon-btn icon-btn--transparent infotip__host"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--information-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-information-16"
          />
        </svg>
      </button>
      <span
        class="infotip__overlay"
        style="transform: scale3d(1,1,1); left: -16px; top: 40px;"
      >
        <span
          class="infotip__pointer infotip__pointer--top-left"
        />
        <span
          class="infotip__mask"
        >
          <span
            class="infotip__cell"
          >
            <span
              class="infotip__content"
            >
              <span
                class="infotip__heading"
              >
                Title
              </span>
              <p>
                Use Access Key 'S' to display settings.
              </p>
            </span>
            <button
              aria-label="Close"
              class="icon-btn icon-btn--transparent infotip__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-infotip Text instead of icon 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; margin: 200px;"
  >
    <span
      class="infotip"
    >
      <button
        aria-expanded="false"
        class="icon-btn icon-btn--transparent infotip__host"
        type="button"
      >
        Click for infotip
      </button>
      <span
        class="infotip__overlay"
        style="transform: scale3d(1,1,1); left: -10px;"
      >
        <span
          class="infotip__pointer infotip__pointer--top-left"
        />
        <span
          class="infotip__mask"
        >
          <span
            class="infotip__cell"
          >
            <span
              class="infotip__content"
            >
              <span
                class="infotip__heading"
              >
                Title
              </span>
              <p>
                Use Access Key 'S' to display settings.
              </p>
            </span>
            <button
              aria-label="Close"
              class="icon-btn icon-btn--transparent infotip__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
</DocumentFragment>
`;
